Upgrade to java 17 (#1019)
---------

Co-authored-by: bessonm <besson.mael@gmail.com>