@@ -18,7 +18,6 @@ import com.orientechnologies.orient.core.sql.executor.OResultSet;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import org.springframework.stereotype.Component;
 
 @Component("orientAdminService")
@@ -148,7 +147,7 @@ class OrientAdminService implements DatabaseAdminService {
                 properties.addAll(
                     result.getPropertyNames().stream()
                         .filter(s -> !s.equalsIgnoreCase("count"))
-                        .collect(Collectors.toList())
+                        .toList()
                 );
             } else {
                 properties.addAll(result.getPropertyNames());
